@@ -1,83 +1,12 @@
 #! /usr/bin/perl
 use Data::Dumper;
-use DBI();
+require "poll_db.pl";
+require "poll_http.pl";
 
-$PROGID = '$Id: poll.pl,v 1.11 2004/01/10 15:48:33 blytkerchan Exp $';
+$PROGID = '$Id: poll.pl,v 1.12 2004/01/11 11:42:46 blytkerchan Exp $';
 
 $print_header = 1;
 $response_url = '/cgi-bin/poll_response.pl';
-$db_database  = 'jail';
-$db_host      = 'localhost';
-$db_username  = 'ronald';
-$db_password  = '770217104';
-
-sub connect_database()
-{
-	$db{dsn} = "DBI:mysql:database=$db_database;host=$db_host";
-	$db{dbh} = DBI->connect($db{dsn}, $db_username, $db_password, 
-	                        {'RaiseError' => 1});
-}
-
-sub output_header()
-{
-	print "Content-Type: text/html;\n" if ($print_header);
-	print "\n" if ($print_header);
-	print "<html>\n<!-- Generated by $PROGID -->\n";
-	print "<link rel=stylesheet href=\"/poll.css\" type=\"text/css\"/>\n";
-	print "<body>\n";
-}
-
-sub output_footer()
-{
-	print "</body>\n";
-	print "</html>\n";
-}
-
-sub fetch_question()
-{
-	my $sth;
-	my $question;
-	my $val;
-	my $question_id;
-	my %retval;
-	my @examples;
-	my @answers;
-	
-	$sth = $db{dbh}->prepare("SELECT MAX(uid) FROM questions");
-	$sth->execute();
-	$ref = $sth->fetchrow_arrayref();
-	$question_id = $$ref[0];
-
-	$sth = $db{dbh}->prepare("SELECT * FROM questions WHERE uid=$question_id");
-	$sth->execute();
-	$question = $sth->fetchrow_hashref();
-	$retval{question} = $$question{question};
-	$retval{commentable} = $$question{commentable};
-	if ($$question{examples})
-	{
-		$sth = $db{dbh}->prepare("SELECT * FROM examples WHERE question_id=\'$question_id\'");
-		$sth->execute();
-		while ($val = $sth->fetchrow_hashref())
-		{
-			push @examples, $$val{example};
-		}
-		$retval{examples} = \@examples;
-	}
-	if ($$question{answers})
-	{
-		$sth = $db{dbh}->prepare("SELECT * FROM answers WHERE question_id=\'$question_id\'");
-		$sth->execute();
-		while ($val = $sth->fetchrow_hashref())
-		{
-			push @answers, $$val{answer};
-			$retval{unique_answer} = 1 if ($$val{must_be_unique});
-		}
-		$retval{answers} = \@answers;
-	}
-	$retval{uid} = $$question{uid};
-
-	return %retval;
-}
 
 sub output_body()
 {
