@@ -1,0 +1,18 @@
+#! /usr/bin/perl
+$PROGID = '$Id: poll_http.pl,v 1.1 2004/01/11 11:42:46 blytkerchan Exp $';
+
+sub output_header()
+{
+	print "Content-Type: text/html;\n" if ($print_header);
+	print "\n" if ($print_header);
+	print "<html>\n<!-- Generated by $PROGID -->\n";
+	print "<link rel=stylesheet href=\"/poll.css\" type=\"text/css\"/>\n";
+	print "<body>\n";
+}
+
+sub output_footer()
+{
+	print "</body>\n";
+	print "</html>\n";
+}
+
