@@ -1,85 +1,18 @@
 #! /usr/bin/perl -w
 use Data::Dumper;
-use DBI();
+require "poll_db.pl";
+require "poll_http.pl";
 
-#$/="\r\n";
 $print_header = 1;
-$db_database  = 'jail';
-$db_host      = 'localhost';
-$db_username  = 'ronald';
-$db_password  = '770217104';
-$PROGID       = '$Id: poll_response.pl,v 1.4 2004/01/10 15:48:33 blytkerchan Exp $';
-
-sub connect_database()
-{
-	$db{dsn} = "DBI:mysql:database=$db_database;host=$db_host";
-	$db{dbh} = DBI->connect($db{dsn}, $db_username, $db_password, 
-	                        {'RaiseError' => 1});
-}
-
-sub output_header()
-{
-	print "Content-Type: text/html;\n" if ($print_header);
-	print "\n" if ($print_header);
-	print "<html>\n<!-- Generated by $PROGID -->\n";
-	print "<link rel=stylesheet href=\"/poll.css\" type=\"text/css\"/>\n";
-	print "<body>\n";
-}
-
-sub output_footer()
-{
-	print "</body>\n";
-	print "</html>\n";
-}
-
-sub put_response(%)
-{
-	my $sth;
-	my $answerref;
-	my $arrayref;
-	my $hashref;
-	my @answer_array;
-	my @answerid_array;
-	my $template;
-	my $responseref = $_[0];
-	my $create_request =<<EOE
-CREATE TABLE IF NOT EXISTS responses (
-	uid int(11) NOT NULL auto_increment,
-	question_id int(11) NOT NULL default '0',
-	comment text,
-	answers varchar(160) default NULL,
-	remote_ip varchar(16) default NULL,
-	log_time timestamp,
-	PRIMARY KEY  (uid)
-) TYPE=MyISAM;
-EOE
-;	
-	$sth = $db{dbh}->prepare($create_request);
-	$sth->execute();
-
-	$template = "SELECT * FROM answers WHERE question_id=\'%d\' AND answer like \'%s\';";
-	$arrayref = $$responseref{answer};
-	if ($arrayref)
-	{
-		@answer_array = @$arrayref;
-		foreach(@answer_array)
-		{
-			chomp $_;
-			chop $_;
-			$sth = $db{dbh}->prepare(sprintf($template, $$responseref{question_id}, $_));
-			$sth->execute();
-			$hashref = $sth->fetchrow_hashref();
-			push @answerid_array, $$hashref{uid};
-		}
-	}
-	
-	$template = "INSERT INTO responses (question_id, comment, answers, remote_ip) VALUES (\'%d\',\'%s\',\'%s\',\'%s\')";
-	$sth = $db{dbh}->prepare(sprintf($template, $$responseref{question_id}, "$$responseref{comment}", "@answerid_array", $ENV{REMOTE_ADDR}));
-	$sth->execute();
-}
+$PROGID       = '$Id: poll_response.pl,v 1.5 2004/01/11 11:42:46 blytkerchan Exp $';
 
 sub output_body()
 {
+	print "<META HTTP-EQUIV=\"Refresh\" CONTENT=\"30; poll_result.pl\">\n";
+	print "<h1>Thank you!</h1>\n";
+	print "<p>Thank you for answering our poll.<br/>\n";
+	print "Your response has been recorded.<br/>\n";
+	print "You will be redirected to the results page in 30 seconds. Should this not work, please click <a href=\"poll_result.pl\">here</a>.</p>\n";
 }
 
 sub add_to_hash(%$$)
@@ -98,7 +31,6 @@ sub add_to_hash(%$$)
 	$$hashref{$key} = \@array;
 }
 
-#open LOGFILE, ">logfile";
 while (<>)
 {
 	if ($last_key ne 'comment')
@@ -121,6 +53,7 @@ while (<>)
 
 connect_database();
 put_response(\%response);
+
 output_header();
 output_body();
 output_footer();
